# ServerMind-MCP

./: .gitignore  MCP_ServerControl_Architecture.md  README.md  StartGUI.vbs  bash.exe.stackdump  claude_config_example.json  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup-nextjs-ui.bat  start_gui.bat  start_mcp.bat
audit/: __init__.py  file_handler.py  logger.py  models.py  ring_buffer.py
config/: __init__.py  engine.py  paths.py  schema.py
config/migrations/: __init__.py  v1_to_v2.py
gui/: __init__.py  __main__.py  app.py  ipc_client.py  state.py
gui/panels/: __init__.py  dashboard.py  exposure_control.py  log_viewer.py  manual_terminal.py  server_config.py  settings.py
gui/themes/: __init__.py  dark.py  light.py
gui/utils/: formatting.py  (+1 more)
ipc/: __init__.py  auth.py  bridge.py  cache_writer.py  event_bus.py  models.py  websocket.py
mcp_server/: __init__.py  __main__.py  server.py
nextjs-ui/: .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
pipeline/: __init__.py  executor.py  queue_manager.py  result.py
sample-html/: index.html  script.js  style.css
scripts/: generate_test_ppk.py  reset_config.py
servermind_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
shared/: __init__.py  constants.py  exceptions.py  models.py
ssh/: __init__.py  connection.py  exec_channel.py  keepalive.py  ppk_handler.py  reconnect.py  session_manager.py  session_registry.py  sftp_transfer.py  shell_channel.py  workflow_pool.py
tests/: __init__.py
(+109 files in other folders)
