[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "servermind-mcp"
version = "1.0.0"
description = "ServerMind MCP — AI-accessible SSH infrastructure control system"
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "mcp>=1.0.0",
    "paramiko>=3.4.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "pydantic>=2.7.0",
    "jsonschema>=4.22.0",
    "cryptography>=42.0.0",
    "customtkinter>=5.2.2",
    "httpx>=0.27.0",
    "websocket-client>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
servermind-mcp = "mcp_server.__main__:main"
servermind-gui = "gui.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*", "ssh*", "ipc*", "config*", "pipeline*", "audit*", "gui*", "shared*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
